--- a/templates/apache_httpd/httpd-nagios.conf.erb
+++ b/templates/apache_httpd/httpd-nagios.conf.erb
@@ -6,7 +6,7 @@ ScriptAlias /nagios/cgi-bin/ /usr/<%= scope.lookupvar("nagios::params::libdir") 
    Allow from 127.0.0.1
 <% @apache_allowed_from.each do |val| -%>
    Allow from <%= val %>
-<% end -%>
+<% end unless @apache_allowed_from.nil? or @apache_allowed_from.empty?-%>
    AuthType Basic
    AuthUserFile /etc/nagios/.htpasswd
    AuthName "Nagios"
@@ -21,7 +21,7 @@ Alias /nagios/ /usr/share/nagios/html/
    Allow from 127.0.0.1
 <% @apache_allowed_from.each do |val| -%>
    Allow from <%= val %>
-<% end -%>
+<% end unless @apache_allowed_from.nil? or @apache_allowed_from.empty?-%>
    AuthType Basic
    AuthUserFile /etc/nagios/.htpasswd
    AuthName "Nagios"
